--- a/css/styles.css
+++ b/css/styles.css
@@ -3,6 +3,7 @@
 
 body{
     background-color: #000000;
+    margin: 0; /* Elimina el margen predeterminado del cuerpo */
 }
 
 
@@ -105,13 +106,106 @@ body{
 
 .tituloIzquierdo {
     margin-right: 65px;
+    margin-top: 30px;
+    margin-bottom: 30px;
 }
 
 .tituloDerecho {
     margin-left: 65px;
+    margin-top: 30px;
+    margin-bottom: 30px;
 }
 
 
 .resaltado {
     color: #FFA900; 
+    line-height: 0.5; /* interlineado */
   }
+
+
+
+
+@media (max-width: 460px) {
+    .container {
+        flex-direction: column;
+        margin-top: 45px;
+        margin-bottom: 45px;
+        margin-left: 15px;
+        margin-right: 15px;
+        max-width: 100%;
+        box-sizing: border-box;
+    }
+}
+
+
+@media (max-width: 460px) {
+    .containerInterno {
+        flex-direction: column;
+        margin-top: 30px;
+        margin-bottom: 30px;
+        max-width: 100%;
+        box-sizing: border-box;
+    }
+}
+
+
+
+@media (max-width: 460px) {
+    .imagenes {
+        flex-direction: column;
+        margin: 0px;
+        max-width: 100%;
+        box-sizing: border-box;
+    }
+}
+
+
+
+
+@media (max-width: 460px) {
+    .imagenSection {
+        max-width: 100%;
+        box-sizing: border-box;
+        order: 2;
+    }
+}
+
+
+
+
+@media (max-width: 460px) {
+    .paragraphsIzquierdo, .paragraphsDerecho, .paragraphs {
+        flex-direction: column;
+        text-align: left;
+        font-size: 10px;
+    }
+}
+
+
+@media (max-width: 460px) {
+    .subtitleIzquierdo, .subtitleDerecho {
+        flex-direction: column;
+        text-align: left;
+        font-size: 28px;
+    }
+}
+
+
+@media (max-width: 460px) {
+    .resaltado {
+        flex-direction: column;
+        text-align: left;
+        font-size: 28px;
+    }
+}
+
+
+
+@media (max-width: 460px) {
+    .tituloIzquierdo, .tituloDerecho {
+        margin: 15px;
+        max-width: 100%;
+        box-sizing: border-box;
+        order: 1;
+    }
+}
