--- a/css/styles.css
+++ b/css/styles.css
@@ -22,7 +22,7 @@ body{
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 15vh;
+/*     height: 15vh; */
     flex-direction: column;
     max-width: 1100px;
     margin: 0 auto;
@@ -32,20 +32,7 @@ body{
 
 
 
-.container-blanco {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: row;
-    width: fit-content; /* CENTRA EL CONTENIDO */
-    padding: 0 45px 0 45px;
-    margin: 0 auto;
-    
-}
 
-.feature-section {
-    padding: 0 45px 0 45px;
-}
 
 
 
@@ -75,23 +62,6 @@ body{
     margin: 10px;
 }
 
-.title-dos {
-    font-family: 'Trade Gothic LT Pro', sans-serif;
-    font-size: 38px;
-    font-weight: 900;
-    color: rgb(0, 0, 0);
-    text-align: center;
-    margin: 10px;
-}
-
-h2 {
-    font-family: 'Trade Gothic LT Pro', sans-serif;
-    font-size: 28px;
-    font-weight: 900;
-    color: rgb(0, 0, 0);
-    text-align: left;
-    margin: 15px 0 15px 0;
-}
 
 
 .subtitleIzquierdo {
@@ -154,14 +124,6 @@ h2 {
 }
 
 
-.paragraphs-blanco {
-    font-family: 'Montserrat', sans-serif;
-    font-size: 10px;
-    color: rgb(0, 0, 0);
-    text-align: left;
-    margin: 0px;
-    line-height: 1.6;
-}
 
 
 .tituloIzquierdo {
@@ -183,24 +145,6 @@ h2 {
   }
 
 
-
-  .iconos, .iconouno, .iconodos, .iconotres {
-    width: 29px;
-    margin: 25px 0 10px 0;
-  }
-
-
-
-.estilosblanco {
-    max-width: 1100px;
-    padding: 0 45px 0 45px;
-    display: flex;
-    flex-direction: column;
-    /* flex-wrap: nowrap; */
-    justify-content: center;
-    margin: 0 auto; /* ESTO HACE QUE SE CENTRE LA SECCION */
-    /* width: fit-content; /* CENTRA EL CONTENIDO */ 
-}
 
 
 
@@ -291,11 +235,101 @@ h2 {
 
 
 
-#nueva-seccion {
-    background-color: white; 
-    width: 100%;
-    padding: 50px;
-    margin: 50px 0 40px 0;
-    
+
+.container-general {
+    background-color: white;
+}
+
+
+.container-blanco {
+    background-color: white;
+    width: 100vw;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    margin-top: 40px;
+    padding: 45px 0 0 0;
+}
+
+.container-feature {
+    background-color: white;
+    width: 100vw;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: row;
+    margin-bottom: 60px;
+    padding: 0 0 45px 0;
+}
+
+
+.title-dos {
+    font-family: 'Trade Gothic LT Pro', sans-serif;
+    font-size: 38px;
+    font-weight: 900;
+    color: rgb(0, 0, 0);
+    text-align: center;
+    margin: 10px;
+}
+
+
+.paragraphs-blanco {
+    font-family: 'Montserrat', sans-serif;
+    font-size: 12px;
+    color: rgb(0, 0, 0);
+    text-align: center;
+    margin: 0px;
+    line-height: 1.6;
+    max-width: 1100px;
+    padding: 0 15px 0 15px;
+}
+
+.paragraphs-feature {
+    font-family: 'Montserrat', sans-serif;
+    font-size: 12px;
+    color: rgb(0, 0, 0);
+    text-align: left;
+    margin: 0px;
+    line-height: 1.6;
+    max-width: 1100px;
+}
+
+.feature-section {
+    padding: 0 45px 0 45px;
+}
+
+.iconos, .iconouno, .iconodos, .iconotres {
+    width: 29px;
+    margin: 25px 0 10px 0;
+}
+
+h2 {
+    font-family: 'Trade Gothic LT Pro', sans-serif;
+    font-size: 28px;
+    font-weight: 900;
+    color: rgb(0, 0, 0);
+    text-align: left;
+    margin: 15px 0 0 0;
+}
+
+.resaltado-dos {
+    color: #FFA900; 
+    line-height: 0.5; /* interlineado */
+  }
+
+.imagenpc {
+    width: 150px; 
+    height: auto;
+}
+
+
+@media (max-width: 750px) {
+    .container-feature {
+        flex-direction: column;
+        margin-bottom: 45px;
+        max-width: 100%;
+        box-sizing: border-box;
+    }
 }
 
